0.06XXX XXX

    - Fix spelling errors in POD (Ansgar Burchardt)

    - Bump Config::Any requirement to version 0.18 for YAML::XS support

0.06001 2010-01-08

    - Fixed issue with Model::HashRef where form fields with an underscore
      and overlapping name (e.g. 'foo' and 'foo_bar') were causing problems
    
    - Fix test suite year issue.

0.06000 2009-12-10

    - New get_parent() method that traverses the parent hierarchy, returning
      the first parent that matches the supplied options.
    
    - Date element, year menu now supports 'reverse' option to reverse order
      of year list. - patch from Ozum Eldogan.
    
    - New Element::Block method auto_block_id().
    
    - New only_on_reps() method for constraints on fields within a Repeatable
      element. Causes the constraint to only be run if the field's
      repeatable_count() matches one of the set values.
    
    - New Repeatable::Any constraint.
    
    - Bugfix: after submission, group-type fields were getting the wrong value
      when multiple fields had the same name. - patch by Doug Orleans.
    
    - Bugfix: If a field in a Repeatable block had an error, all copies of that
      field were displaying the error. - report by Doug Orleans.
    
    - Repeatable elements inside a Repeatable element, now works without
      having nested_name set.
    
    - Performance fix: change all uses of eval() to check for array/hash-refs
      to Scalar::Util::reftype() instead. - Was causing a hit for group-type
      fields with large numbers of options. - initial patch by Steve Nolte.
    
    - Bump required version of Data::Visitor to 0.26
    
    - Minor pod fixes.

0.05004 2009-12-02

    - No changes - last release was built on Windows and didn't pass pause's
      indexer checks.

0.05003 2009-11-29

    - Fix YAML test files for YAML::XS compatibility

0.05002 2009-11-25

    - Fix handling of counter_name in nested-repeatables.
    